--- a/assets/css/_page/index.css
+++ b/assets/css/_page/index.css
@@ -1326,7 +1326,7 @@
 
 .event-icon {
   position: fixed;
-  right: 30px;
+  left: 30px;
   bottom: 50px;
   padding: 0;
   display: flex;
@@ -1336,7 +1336,7 @@
   gap: 10px; }
   @media only screen and (max-width: 576px) {
     .event-icon {
-      right: 20px;
+      left: 20px;
       bottom: 30px; } }
   .event-icon img {
     max-width: 120px; }
