--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1777,7 +1777,7 @@ span.input-group-text[data-i18n="To"] {
 
 .event-icon {
   position: fixed;
-  right: 30px;
+  left: 30px;
   bottom: 50px;
   padding: 0;
   display: flex;
@@ -1787,7 +1787,7 @@ span.input-group-text[data-i18n="To"] {
   gap: 10px; }
   @media only screen and (max-width: 576px) {
     .event-icon {
-      right: 20px;
+      left: 20px;
       bottom: 30px; } }
   .event-icon img {
     max-width: 120px; }
