--- a/src/assets/scss/_page/world-cup.scss
+++ b/src/assets/scss/_page/world-cup.scss
@@ -648,7 +648,7 @@
 
 .event-icon {
   position: fixed;
-  right: 30px;
+  left: 30px;
   bottom: 50px;
   padding: 0;
   display: flex;
@@ -658,7 +658,7 @@
   gap: 10px;
 
   @media only screen and (max-width: 576px) {
-    right: 20px;
+    left: 20px;
     bottom: 30px;
   }
 
